# hotspot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
scripts/: build_exe.ps1  run.ps1  setup_venv.ps1  test.ps1  version.ps1  version.py
src/tunnelspot/: __main__.py  app.py  config.py  models.py  theme.py
src/tunnelspot/services/: __init__.py  hotspot.py  passwords.py  powershell_helper.ps1
src/tunnelspot/widgets/: __init__.py  toggle.py
tests/: test_config.py  test_version_script.py
