[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnelspot"
dynamic = ["version"]
description = "Minimal Windows desktop app for managing a VPN-backed Wi-Fi hotspot."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "PySide6>=6.8,<7",
  "keyring>=25,<26",
  "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
  "PyInstaller>=6.14,<7",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tunnelspot = ["services/*.ps1"]

[tool.setuptools.dynamic]
version = {attr = "tunnelspot.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
